<resources>
    <string name="app_name" translatable="false">MISPbump</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="misp_server_url_hint" translatable="false">MISP Server URL</string>
    <string name="misp_automation_hint">MISP Automation Key</string>
    <string name="no_information">No Information</string>
    <string name="save_automation_key_hint">Save Automation Key</string>
    <string name="menu_login_help_label">Help</string>
    <string name="login_help_text"><b>MISP Server URL</b>\nPublic MISP URL\n\n<b>MISP Automation key</b></string>
    <string name="ok" translatable="false">Okay</string>
    <string name="qr_code">QR code</string>
    <string name="sync">Synchronization</string>
    <string name="no_syncs_hint">You have not synced any MISP instances yet</string>
    <string name="activity_exchange_scan_partner_qr_hint">Scan your partners QR code</string>
    <string name="activity_exchange_continue_if_scanned">Continue if your partner also scanned this QR code</string>
    <string name="button_continue">next</string>
    <string name="button_prev">previous</string>
    <string name="nationality">Nationality</string>
    <string name="sector">Sector</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="credentials">Credentials</string>
    <string name="password">Password</string>
    <string name="authkey">Authkey</string>
    <string name="url" translatable="false">URL</string>
    <string name="email" translatable="false">Email</string>
    <string name="fragment_upload_settings_title">This Organisation should have the following permissions</string>
    <string name="settings_self_signed_title">Allow self signed certificates</string>
    <string name="settings_self_signed_on">Server certificate can be from any CA (not recommended)</string>
    <string name="settings_push_title">Push</string>
    <string name="settings_push_off">Events and their attributes cannot be uploaded</string>
    <string name="settings_pull_title">Pull</string>
    <string name="settings_pull_off">Events and their attributes cannot be downloaded</string>
    <string name="settings_cache_title">Cache</string>
    <string name="settings_cache_off">Events and their attributes will not be cached</string>
    <string name="settings_self_signed_off">Only certificates from trusted CA\'s are accepted</string>
    <string name="settings_push_on">Events and their attributes can be uploaded</string>
    <string name="settings_pull_on">Events and their attributes can be downloaded</string>
    <string name="settings_cache_on">Events and their attributes will be cached</string>
    <string name="upload">Upload</string>
    <string name="upload_action_available">MISP instance available</string>
    <string name="upload_action_add_org">Add organisation</string>
    <string name="upload_action_add_user">Add sync user</string>
    <string name="upload_action_add_server">Add sync server</string>
    <string name="public_key">Public Key</string>
    <string name="scan_qr_hint">Scan your partners QR code</string>
    <string name="public_key_received_hint">Received public key</string>
    <string name="sync_info_received_hint">Received sync information</string>
    <string name="sync_information">Sync Information</string>
    <string name="preference_delete_all_syncs">Delete all synchronisations</string>
    <string name="preference_delete_all_syncs_summary">This will only delete local data</string>
    <string name="preference_category_general">General</string>
    <string name="preference_category_information">App information</string>
    <string name="preference_github_summary">Visit the Github project</string>
    <string name="sync_details_activity_label">Synchronisation details</string>
    <string name="information">Information</string>
    <string name="upload_changes">Upload Changes</string>
    <string name="download_changes">Download Changes</string>
    <string name="label_delete_sync">Delete Synchronisation</string>
    <string name="content_description_sync_status_icon">Shows if local changes are already uploaded to MISP instance</string>
</resources>
