<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_upload_settings_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
            android:id="@+id/self_signed_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:onText="@string/settings_self_signed_on"
            app:offText="@string/settings_self_signed_off"
            app:title="@string/settings_self_signed_title"/>

        <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
            android:id="@+id/push_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/self_signed_switch"
            app:onText="@string/settings_push_on"
            app:offText="@string/settings_push_off"
            app:title="@string/settings_push_title"/>

        <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
            android:id="@+id/pull_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/push_switch"
            app:onText="@string/settings_pull_on"
            app:offText="@string/settings_pull_off"
            app:title="@string/settings_pull_title"/>

        <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
            android:id="@+id/cache_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pull_switch"
            app:onText="@string/settings_cache_on"
            app:offText="@string/settings_cache_off"
            app:title="@string/settings_cache_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>