<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false">

        <lu.circl.mispbump.customViews.MaterialPreferenceText
            android:id="@+id/baseUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:subtitle="www.google.de"
            app:title="@string/url"/>

        <lu.circl.mispbump.customViews.MaterialPreferenceText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:subtitle="syncuser_orga@mispx.yz"
            app:title="@string/email"/>

        <lu.circl.mispbump.customViews.MaterialPasswordView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:title="@string/password"
            app:password="abc"/>

        <lu.circl.mispbump.customViews.MaterialPasswordView
            android:id="@+id/authkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:title="@string/authkey"
            app:password="abc"/>
    </LinearLayout>
</ScrollView>