<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SyncInfoDetailActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/PopupTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollview"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrollview_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"
            android:alpha="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/information"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

            <lu.circl.mispbump.customViews.MaterialPreferenceText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="Name"
                app:subtitle="No name" />

            <lu.circl.mispbump.customViews.MaterialPreferenceText
                android:id="@+id/uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="UUID"
                app:subtitle="No UUID" />

            <lu.circl.mispbump.customViews.MaterialPreferenceText
                android:id="@+id/sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uuid"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="Sector"
                app:subtitle="No sector" />

            <lu.circl.mispbump.customViews.MaterialPreferenceText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uuid"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="@string/description"
                app:subtitle="No description" />

            <View
                android:background="@color/dividerColor"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

            <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
                android:id="@+id/switch_allow_self_signed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/settings_self_signed_title"
                app:offText="@string/settings_self_signed_off"
                app:onText="@string/settings_self_signed_on" />

            <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
                android:id="@+id/switch_allow_push"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/settings_push_title"
                app:offText="@string/settings_push_off"
                app:onText="@string/settings_push_on" />

            <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
                android:id="@+id/switch_allow_pull"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/settings_pull_title"
                app:offText="@string/settings_pull_off"
                app:onText="@string/settings_pull_on" />

            <lu.circl.mispbump.customViews.MaterialPreferenceSwitch
                android:id="@+id/switch_allow_cache"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/settings_cache_title"
                app:offText="@string/settings_cache_off"
                app:onText="@string/settings_cache_on" />

            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkbox_self_signed"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="16dp"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:text="@string/settings_self_signed_title"-->
            <!--                    app:layout_constraintStart_toStartOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent" />-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkbox_push"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="16dp"-->
            <!--                    android:layout_marginTop="8dp"-->
            <!--                    android:text="@string/settings_push_title"-->
            <!--                    app:layout_constraintHorizontal_chainStyle="packed"-->
            <!--                    app:layout_constraintStart_toStartOf="parent"-->
            <!--                    app:layout_constraintTop_toBottomOf="@id/checkbox_self_signed" />-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkbox_pull"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="32dp"-->
            <!--                    android:layout_marginTop="8dp"-->
            <!--                    android:text="@string/settings_pull_title"-->
            <!--                    app:layout_constraintStart_toEndOf="@+id/checkbox_push"-->
            <!--                    app:layout_constraintTop_toBottomOf="@id/checkbox_self_signed" />-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/checkbox_cache"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_marginStart="16dp"-->
            <!--                    android:layout_marginTop="8dp"-->
            <!--                    android:layout_marginBottom="16dp"-->
            <!--                    android:text="@string/settings_cache_title"-->
            <!--                    app:layout_constraintTop_toBottomOf="@id/checkbox_push"-->
            <!--                    app:layout_constraintStart_toStartOf="parent"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent" />-->
            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

            <View
                android:background="@color/dividerColor"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/credentials"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

            <lu.circl.mispbump.customViews.MaterialPreferenceText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="Email"
                app:subtitle="Keine Ahnung" />

            <lu.circl.mispbump.customViews.MaterialPasswordView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/password"
                app:password="Weiß ich leider auch nicht" />

            <lu.circl.mispbump.customViews.MaterialPasswordView
                android:id="@+id/authkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/authkey"
                app:password="Den erst recht nicht ..." />
        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="bottom|end"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/menu_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@color/white"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/animated_arrow_cloud_down"
            android:tint="@color/white"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/layout_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/fab_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/fab_upload_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@drawable/tooltip_background"
                android:backgroundTint="@color/black_70"
                android:padding="8dp"
                android:text="@string/upload_changes"
                android:textColor="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cloud_upload"
                app:fabSize="mini" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/layout_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/fab_download_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@drawable/tooltip_background"
                android:backgroundTint="@color/black_70"
                android:padding="8dp"
                android:text="@string/download_changes"
                android:textColor="@color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cloud_download"
                app:fabSize="mini" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
